--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ hs_err_pid*
 
 # IntelliJ
 /out/
+/bin/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -58,3 +59,9 @@ fabric.properties
 
 # Binary outputs
 *.bin
+
+# FRISC outputs
+*.frisc
+
+# Node
+node_modules/*
